--- a/src/app/(pages)/posts/create/style.module.css
+++ b/src/app/(pages)/posts/create/style.module.css
@@ -1,13 +1,3 @@
 .item {
-  @apply tw-flex tw-flex-auto tw-flex-col tw-space-y-6  tw-bg-white/90  tw-min-w-full lg:tw-min-w-[60%] !tw-max-w-full tw-px-5 tw-py-3 tw-rounded-md;
-}
-
-.actions {
-  @apply tw-flex tw-justify-between;
-}
-
-html[class='dark'] {
-  .item {
-    @apply tw-bg-black/80;
-  }
+  @apply tw-flex tw-flex-auto tw-flex-col tw-space-y-6  tw-bg-white/90 dark:tw-bg-black/80  tw-min-w-full lg:tw-min-w-[60%] !tw-max-w-full tw-px-5 tw-py-3 tw-rounded-md;
 }
