--- a/src/app/(pages)/posts/[item]/page.module.css
+++ b/src/app/(pages)/posts/[item]/page.module.css
@@ -1,5 +1,5 @@
 .item {
-  @apply tw-bg-white/80 dark:tw-bg-zinc-800/80 tw-flex-auto tw-w-full tw-drop-shadow-lg tw-rounded-md tw-flex tw-flex-col;
+  @apply tw-bg-white/80 dark:tw-bg-zinc-800/80 tw-flex-auto tw-w-full tw-rounded-md tw-flex tw-flex-col;
 
   & > .content {
     @apply tw-p-3 tw-flex tw-flex-col tw-flex-auto;
@@ -15,21 +15,21 @@
 
   & > .content {
     @apply tw-p-3 tw-flex tw-flex-col;
+  }
+}
 
-    & > .title {
-      @apply tw-my-2;
-    }
+.title {
+  @apply tw-my-2 tw-flex;
+}
 
-    & > .meta {
-      @apply tw-flex tw-my-2 tw-justify-between;
+.meta {
+  @apply tw-flex tw-my-2 tw-justify-between;
 
-      & > div {
-        @apply tw-flex tw-items-center;
-      }
+  & > div {
+    @apply tw-flex tw-items-center;
+  }
 
-      & time {
-        @apply tw-ml-2;
-      }
-    }
+  & time {
+    @apply tw-ml-2;
   }
 }
