--- a/src/app/_components/mdx/hydrate.module.css
+++ b/src/app/_components/mdx/hydrate.module.css
@@ -1,11 +1,7 @@
 .container {
-  @apply tw-w-full tw-flex tw-gap-8;
+  @apply tw-w-full tw-flex tw-gap-8 tw-relative;
 
   & > .article {
     @apply tw-flex-1 tw-min-w-0 tw-overflow-hidden;
-  }
-
-  & > .toc {
-    @apply tw-w-56 tw-flex-shrink-0 tw-sticky tw-top-16 tw-self-start;
   }
 }
