--- a/src/app/(pages)/posts/[item]/page.module.css
+++ b/src/app/(pages)/posts/[item]/page.module.css
@@ -1,9 +1,5 @@
 .item {
-  @apply tw-bg-white/80 dark:tw-bg-zinc-800/80 tw-flex-auto tw-w-full tw-rounded-md tw-flex tw-flex-col;
-
-  & > .content {
-    @apply tw-p-3 tw-flex tw-flex-col tw-flex-auto;
-  }
+  @apply tw-bg-white/80 dark:tw-bg-zinc-800/80 tw-flex-auto tw-w-full tw-shadow-lg tw-rounded-md tw-flex tw-flex-col;
 
   & > .thumb {
     @apply tw-relative tw-w-full tw-h-36 md:tw-h-48 lg:tw-h-64 tw-block;
@@ -14,7 +10,7 @@
   }
 
   & > .content {
-    @apply tw-p-3 tw-flex tw-flex-col;
+    @apply tw-p-3 tw-flex tw-flex-col tw-flex-auto;
   }
 }
 
